--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,7 +6,7 @@ $darkGradient: linear-gradient(180deg, hsl(0, 0%, 57%) 0%, hsl(227, 31%, 35%) 10
 $whiteGradient: linear-gradient(180deg, hsl(0, 0%, 100%), hsl(0, 0%, 100%));
 $purple: hsl(259, 100%, 81%);
 $green: hsl(145, 50%, 62%);
-$errorColor: #cc072b;
+$errorColor: hsl(349, 93%, 41%);
 $shadowColor: hsla(0, 0%, 0%, 0.2);
 $darkShade5: hsla(236, 35%, 19%, 0.05);
 $darkShade10: hsla(236, 35%, 19%, 0.1);
