--- a/src/templates/components/datepicker-block/_datepicker-block.scss
+++ b/src/templates/components/datepicker-block/_datepicker-block.scss
@@ -5,7 +5,7 @@
   &__fields {
     margin-bottom: 0.55rem;
     width: 100%;
-    @include set-flex($mainAxis: space-between, $gap: 2rem, $crossAxis: center);
+    @include set-flex($mainAxis: space-between, $crossAxis: flex-start, $gap: 2rem);
   }
 
   &__field {
