--- a/src/pages/room/room.scss
+++ b/src/pages/room/room.scss
@@ -41,21 +41,21 @@
     
     &__photos {
       margin-bottom: 7rem;
-      height: 48.5rem;
       @include set-flex();
 
       &-main {
-        @include set-size(68%, 100%);
+        width: 68%;
       }
 
       &-secondary {
-        @include set-size(32%, 100%);
+        width: 32%;
         @include set-flex($flexWrap: wrap);
       }
     }
 
     &__photo {
       @include set-size(100%, 50%);
+      max-height: 100%;
 
       &-image {
         display: inline-block;
@@ -146,13 +146,17 @@
   }
 }
 
-@media(max-width: 1439px) {
+@media(max-width: 1440px) {
   .page-room {
-    &__container {
-      max-width: 1160px;
-    }
-
     .main-content {
+      &__photo {
+        max-height: 243px;
+
+        &_big {
+          max-height: 486px;
+        }
+      }
+
       &__reviews {
         max-width: 710px;
       }
@@ -188,18 +192,6 @@
     .main-content {
       padding-bottom: 0;
 
-      &__photos {
-        margin-bottom: 4rem;
-
-        &-main {
-          width: 60%;
-        }
-
-        &-secondary {
-          width: 40%;
-        }
-      }
-
       &__wrapper {
         flex-direction: column;
       }
@@ -234,12 +226,11 @@
 
     .main-content {
       &__photos {
-        height: 45rem;
+        margin-bottom: 4rem;
         flex-wrap: wrap;
 
         &-main, &-secondary {
           width: 100%;
-          height: 50%;
         }
       }
 
