Modified dropdown, checkbox, radio-button, text-field, header, toggle, checkbox and main-button components, changed login page

--- a/src/templates/components/main-button/_main-button.scss
+++ b/src/templates/components/main-button/_main-button.scss
@@ -29,7 +29,7 @@
       padding: 0;
     }
     
-    &:hover, &:focus, &:active, &-active {
+    &:hover, &:focus, &-active {
       color: $darkShade50;
     }
   }
