--- a/src/templates/components/checkbox/_checkbox.scss
+++ b/src/templates/components/checkbox/_checkbox.scss
@@ -9,10 +9,15 @@
     flex-shrink: 0;
     margin: 0;
     appearance: none;
+    outline: none;
     @include set-size(2rem);
     @include set-border($borderColor: $darkShade25, $borderRadius: 0.4rem);
     transition: border-color 0.5s;
     cursor: pointer;
+
+    &:hover, &:focus {
+      box-shadow: 0 0 1rem $purple;
+    }
 
     &::after {
       content: '';
