--- a/src/templates/components/donut-chart/donut-chart.pug
+++ b/src/templates/components/donut-chart/donut-chart.pug
@@ -1,3 +1,6 @@
+//-
+  counter - total sum of sharts values
+  units - units for chart's positioning
 mixin donut-chart(options)
   if !options
     - options = {}
