--- a/src/templates/components/footer/footer.pug
+++ b/src/templates/components/footer/footer.pug
@@ -1,5 +1,10 @@
 include ../subscription-field/subscription-field
 
+//-
+  menu - all menu's items
+  copyright - copyright text
+  socials - links to social sites
+
 mixin footer(options) 
   if !options
     - options = {}
