--- a/src/templates/components/header/header.pug
+++ b/src/templates/components/header/header.pug
@@ -1,5 +1,10 @@
 include ../main-button/main-button
 
+//-
+  menu - all menu's items
+  isUserLoggedIn - defines, whther user logged in or not
+  user - user profile params (name, profileUrl)
+
 mixin header(options)
   if !options
     - options = {}
