--- a/src/templates/components/login-panel/login-panel.pug
+++ b/src/templates/components/login-panel/login-panel.pug
@@ -2,6 +2,10 @@ include ../h1-title/h1-title
 include ../text-field/text-field
 include ../main-button/main-button
 
+//-
+  action - link to the server
+  title - panel's title text
+
 mixin login-panel(options) 
   if !options
     - options = {}
