--- a/src/templates/components/registration-panel/registration-panel.pug
+++ b/src/templates/components/registration-panel/registration-panel.pug
@@ -4,6 +4,10 @@ include ../radio-button/radio-button
 include ../toggle/toggle
 include ../main-button/main-button
 
+//-
+  action - link to the server,
+  title - panel's title text
+
 mixin registration-panel(options) 
   if !options
     - options = {}
