--- a/src/templates/components/room-card/room-card.pug
+++ b/src/templates/components/room-card/room-card.pug
@@ -1,5 +1,13 @@
 include ../rate-button/rate-button
 
+//-
+  slider - slider with room's photos
+  id - room's id
+  type - room's type
+  currentPrice - room's price
+  rateButton - settings for rate-button
+  reviewsCount - number of reviews
+
 mixin room-card(options) 
   if !options
     - options = {}
