--- a/src/templates/components/search-panel/search-panel.pug
+++ b/src/templates/components/search-panel/search-panel.pug
@@ -3,6 +3,10 @@ include ../datepicker-block/datepicker-block
 include ../dropdown/dropdown
 include ../main-button/main-button
 
+//-
+  action - link to the server
+  title - panel's title text
+
 mixin search-panel(options) 
   if !options
     - options = {}
