Added form validation for subscription field, modified registration-panel component

--- a/src/templates/components/registration-panel/registration-panel.pug
+++ b/src/templates/components/registration-panel/registration-panel.pug
@@ -5,7 +5,7 @@ include ../toggle/toggle
 include ../main-button/main-button
 
 //-
-  action - link to the server,
+  action - link to the server
   title - panel's title text
 
 mixin registration-panel(options) 
